// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page Header Standardised Background image - renders correctly 1`] = `
<jest>
  <div
    class="ecl-page-header ecl-page-header--image"
  >
    <div
      aria-hidden="true"
      class="ecl-page-header__background"
      style="background-image: url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image2.jpg)"
    />
    <div
      class="ecl-container"
    >
      <nav
        aria-label="You are here:"
        class="ecl-breadcrumb ecl-page-header__breadcrumb"
        data-ecl-auto-init="Breadcrumb"
        data-ecl-breadcrumb="true"
      >
        <ol
          class="ecl-breadcrumb__container"
        >
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="static"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              Home
            </a>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
              focusable="false"
              role="presentation"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </li>
          <li
            class="ecl-breadcrumb__segment ecl-breadcrumb__segment--ellipsis"
            data-ecl-breadcrumb-ellipsis=""
          >
            <button
              aria-label="Click to expand"
              class="ecl-button ecl-button--ghost ecl-breadcrumb__ellipsis"
              data-ecl-breadcrumb-ellipsis-button=""
              type="button"
            >
              …
            </button>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
              focusable="false"
              role="presentation"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </li>
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="expandable"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              About the European Commission
            </a>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
              focusable="false"
              role="presentation"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </li>
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="expandable"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              Organisational structure
            </a>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
              focusable="false"
              role="presentation"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </li>
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="static"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              How the Commission is organised
            </a>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
              focusable="false"
              role="presentation"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </li>
          <li
            aria-current="page"
            class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
            data-ecl-breadcrumb-item="static"
          >
            News
          </li>
        </ol>
      </nav>
      <div
        class="ecl-page-header__meta"
      >
        <span
          class="ecl-page-header__meta-item"
        >
          Meta info
        </span>
        <span
          class="ecl-page-header__meta-item"
        >
          DD Month YYYY
        </span>
      </div>
      <div
        class="ecl-page-header__title-container"
      >
        <h1
          class="ecl-page-header__title"
        >
          Page title
        </h1>
      </div>
      <div
        class="ecl-page-header__description-container"
      >
        <img
          alt="Europe map"
          class="ecl-page-header__description-thumbnail"
          src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image2.jpg"
        />
        <p
          class="ecl-page-header__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nec ullamcorper mi. Morbi interdum fermentum tempus. Nam nec rhoncus risus, eget dictum elit. Vestibulum gravida tincidunt venenatis.
        </p>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Page Header Standardised Default - renders correctly 1`] = `
<jest>
  <div
    class="ecl-page-header"
  >
    <div
      class="ecl-container"
    >
      <nav
        aria-label="You are here:"
        class="ecl-breadcrumb ecl-page-header__breadcrumb"
        data-ecl-auto-init="Breadcrumb"
        data-ecl-breadcrumb="true"
      >
        <ol
          class="ecl-breadcrumb__container"
        >
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="static"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              Home
            </a>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
              focusable="false"
              role="presentation"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </li>
          <li
            class="ecl-breadcrumb__segment ecl-breadcrumb__segment--ellipsis"
            data-ecl-breadcrumb-ellipsis=""
          >
            <button
              aria-label="Click to expand"
              class="ecl-button ecl-button--ghost ecl-breadcrumb__ellipsis"
              data-ecl-breadcrumb-ellipsis-button=""
              type="button"
            >
              …
            </button>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
              focusable="false"
              role="presentation"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </li>
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="expandable"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              About the European Commission
            </a>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
              focusable="false"
              role="presentation"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </li>
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="expandable"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              Organisational structure
            </a>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
              focusable="false"
              role="presentation"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </li>
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="static"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              How the Commission is organised
            </a>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
              focusable="false"
              role="presentation"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </li>
          <li
            aria-current="page"
            class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
            data-ecl-breadcrumb-item="static"
          >
            News
          </li>
        </ol>
      </nav>
      <div
        class="ecl-page-header__meta"
      >
        <span
          class="ecl-page-header__meta-item"
        >
          Meta info
        </span>
        <span
          class="ecl-page-header__meta-item"
        >
          DD Month YYYY
        </span>
      </div>
      <div
        class="ecl-page-header__title-container"
      >
        <h1
          class="ecl-page-header__title"
        >
          Page title
        </h1>
      </div>
      <div
        class="ecl-page-header__description-container"
      >
        <img
          alt="Europe map"
          class="ecl-page-header__description-thumbnail"
          src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image2.jpg"
        />
        <p
          class="ecl-page-header__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nec ullamcorper mi. Morbi interdum fermentum tempus. Nam nec rhoncus risus, eget dictum elit. Vestibulum gravida tincidunt venenatis.
        </p>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Page Header Standardised Default renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-page-header"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-container"
    >
      <nav
        aria-label="You are here:"
        class="ecl-breadcrumb ecl-page-header__breadcrumb"
        data-ecl-auto-init="Breadcrumb"
        data-ecl-breadcrumb="true"
      >
        <ol
          class="ecl-breadcrumb__container"
        >
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="static"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              Home
            </a>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
              focusable="false"
              role="presentation"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </li>
          <li
            class="ecl-breadcrumb__segment ecl-breadcrumb__segment--ellipsis"
            data-ecl-breadcrumb-ellipsis=""
          >
            <button
              aria-label="Click to expand"
              class="ecl-button ecl-button--ghost ecl-breadcrumb__ellipsis"
              data-ecl-breadcrumb-ellipsis-button=""
              type="button"
            >
              …
            </button>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
              focusable="false"
              role="presentation"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </li>
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="expandable"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              About the European Commission
            </a>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
              focusable="false"
              role="presentation"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </li>
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="expandable"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              Organisational structure
            </a>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
              focusable="false"
              role="presentation"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </li>
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="static"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              How the Commission is organised
            </a>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
              focusable="false"
              role="presentation"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </li>
          <li
            aria-current="page"
            class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
            data-ecl-breadcrumb-item="static"
          >
            News
          </li>
        </ol>
      </nav>
      <div
        class="ecl-page-header__meta"
      >
        <span
          class="ecl-page-header__meta-item"
        >
          Meta info
        </span>
        <span
          class="ecl-page-header__meta-item"
        >
          DD Month YYYY
        </span>
      </div>
      <div
        class="ecl-page-header__title-container"
      >
        <h1
          class="ecl-page-header__title"
        >
          Page title
        </h1>
      </div>
      <div
        class="ecl-page-header__description-container"
      >
        <img
          alt="Europe map"
          class="ecl-page-header__description-thumbnail"
          src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image2.jpg"
        />
        <p
          class="ecl-page-header__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nec ullamcorper mi. Morbi interdum fermentum tempus. Nam nec rhoncus risus, eget dictum elit. Vestibulum gravida tincidunt venenatis.
        </p>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Page Header Standardised Default renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-page-header custom-class custom-class--test"
  >
    <div
      class="ecl-container"
    >
      <nav
        aria-label="You are here:"
        class="ecl-breadcrumb ecl-page-header__breadcrumb"
        data-ecl-auto-init="Breadcrumb"
        data-ecl-breadcrumb="true"
      >
        <ol
          class="ecl-breadcrumb__container"
        >
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="static"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              Home
            </a>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
              focusable="false"
              role="presentation"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </li>
          <li
            class="ecl-breadcrumb__segment ecl-breadcrumb__segment--ellipsis"
            data-ecl-breadcrumb-ellipsis=""
          >
            <button
              aria-label="Click to expand"
              class="ecl-button ecl-button--ghost ecl-breadcrumb__ellipsis"
              data-ecl-breadcrumb-ellipsis-button=""
              type="button"
            >
              …
            </button>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
              focusable="false"
              role="presentation"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </li>
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="expandable"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              About the European Commission
            </a>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
              focusable="false"
              role="presentation"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </li>
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="expandable"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              Organisational structure
            </a>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
              focusable="false"
              role="presentation"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </li>
          <li
            class="ecl-breadcrumb__segment"
            data-ecl-breadcrumb-item="static"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
              href="/example"
            >
              How the Commission is organised
            </a>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
              focusable="false"
              role="presentation"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </li>
          <li
            aria-current="page"
            class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
            data-ecl-breadcrumb-item="static"
          >
            News
          </li>
        </ol>
      </nav>
      <div
        class="ecl-page-header__meta"
      >
        <span
          class="ecl-page-header__meta-item"
        >
          Meta info
        </span>
        <span
          class="ecl-page-header__meta-item"
        >
          DD Month YYYY
        </span>
      </div>
      <div
        class="ecl-page-header__title-container"
      >
        <h1
          class="ecl-page-header__title"
        >
          Page title
        </h1>
      </div>
      <div
        class="ecl-page-header__description-container"
      >
        <img
          alt="Europe map"
          class="ecl-page-header__description-thumbnail"
          src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image2.jpg"
        />
        <p
          class="ecl-page-header__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nec ullamcorper mi. Morbi interdum fermentum tempus. Nam nec rhoncus risus, eget dictum elit. Vestibulum gravida tincidunt venenatis.
        </p>
      </div>
    </div>
  </div>
</jest>
`;
